--- a/views/home.hbs
+++ b/views/home.hbs
@@ -16,7 +16,7 @@
 			width="20" height="20" class="d-inline-block align-text-top">
         <a href="/" class=" button">Home</a>       
         <div class="right ">
-             <a href="/all"  class="button ">View all Product</a>
+             <a href="/all"  class="button ">View All Product</a>
             <a href="/new"  class="button ">Add product</a> 
         </div>
     </div>
