--- a/views/allProduct.hbs
+++ b/views/allProduct.hbs
@@ -18,8 +18,7 @@
         <div class="right ">
             <form action="/search" method="post" class=" ">
             <input type="text_search" name="search" placeholder="Input the name of toys">
-            <input type="submit" value="Search">
-            
+            <input type="submit" value="Search">            
             <a href="/new"  class="button ">Add product</a> 
         </div>
     </div>     
@@ -32,13 +31,17 @@
             <div class="header card mb-3 mx-1">  
                 <img src="{{picture}}" style="width:100%" height="100"/>
                 <div class="mt-3 container">
-                    {{name}}
+                    <h4>{{name}}</h4>
                     <br>
-                    Price: {{price}}
+                    Price: ${{price}}
                     <br>
                     Category: {{category}}
                     <br>
-                    Quantity: {{quantity}}
+                    {{#if (checkQuantity quantity) }}
+                        Quantity: <label style="color: red;">{{quantity}}</label>
+                    {{else}}
+                        Quantity: {{quantity}}
+                    {{/if}}
                     <br>
                     Age: {{age}}
                     <a href="/delete?id={{_id}}" onclick="return confirm('Are you nut?')" class="border button right">Delete</a>
