--- a/views/newProduct.hbs
+++ b/views/newProduct.hbs
@@ -15,15 +15,16 @@
 			width="20" height="20" class="d-inline-block align-text-top">
         <a href="/" class=" button">Home</a>       
         <div class="right ">
-            <a href="/all"  class="button ">All Product</a>
+            <a href="/all"  class="button ">View All Product</a>
         </div>
     </div>
 
     <div class="container ">
         <h1>New Product</h1>
         <form action="/new" method="post" class="add sidebar_color px-3 py-3">
-        <p>Name <input type="text" name="txtName" class = "form-control pad"> </p> 
-        <p>Price <input type="text" name="txtPrice" class = "form-control pad"></p>
+        <p>Name <input type="text" name="txtName" class = "form-control pad" required> </p> 
+        <p>Price ($)<input type="text" name="txtPrice" class = "form-control pad" required>
+         <label style="color: red;" >{{ results.priceError}}</label></p>
         <br>
         <p>Category         
             <select class = "form-control pad" name="category" >
@@ -33,7 +34,7 @@
                 <option value="Fantasy">Fantasy</option>
             </select>
         </p>
-        <p>Quantity <input type="number" name="quantity" class="form-control " min="0" id="floatingQuantity"> </p>
+        <p>Quantity <input type="number" name="quantity" class="form-control " min="0" id="floatingQuantity" required>   </p>
         <p>Age 
             <div class="form-check">
 			    <input class="form-check-input" type="radio" name="age" value="3+" id="flexRadioDefault1">
@@ -47,7 +48,7 @@
 			    <input class="form-check-input" type="radio" name="age" value="12+" id="flexRadioDefault2" checked>
 			    <label class="form-check-label" for="flexRadioDefault2">12+</label>
 		    </div></p>        
-        <p> Picture URL<input type="text" name="txtPic" class = "form-control pad"></p>     
+        <p> Picture URL<input type="text" name="txtPic" class = "form-control pad" required></p>     
         <br> 
         <input class="right" type="submit" value="Create a new Product">
 
