--- a/views/allProduct.hbs
+++ b/views/allProduct.hbs
@@ -44,7 +44,7 @@
                     {{/if}}
                     <br>
                     Age: {{age}}
-                    <a href="/delete?id={{_id}}" onclick="return confirm('Are you nut?')" class="border button right">Delete</a>
+                    <a href="/delete?id={{_id}}" onclick="return confirm('Do you want to delete?')" class="border button right">Delete</a>
                 </div>                    
             </div>
         {{/each}}
