--- a/views/home.hbs
+++ b/views/home.hbs
@@ -21,7 +21,7 @@
         </div>
     </div>
 
-    <img class="image" src="/images/lego-marvel-super-heroes-the-avengers-iron-man-wallpaper-preview.jpg" width="1600" >
+    <img class="image" src="/images/home7.jpg" width="1600" >
 
     <footer class="py-4 bg-dark text-white-50 ">
             <div class="container text-center">
