--- a/views/allProduct.hbs
+++ b/views/allProduct.hbs
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="mystyle.css">
-   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="mystyle.css">   
     <title>Product Home</title>
 </head>
+
 <body>
     <div class="header">
 		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/LEGO_logo.svg/1200px-LEGO_logo.svg.png"
@@ -21,9 +23,9 @@
             <input type="submit" value="Search">            
             <a href="/new"  class="button ">Add product</a> 
         </div>
-    </div>     
-
+    </div>
     </form>
+
     <div class = "container">
         <h3>All Products</h3>    
         <ul class = "list_product">
@@ -44,13 +46,12 @@
                     {{/if}}
                     <br>
                     Age: {{age}}
-                    <a href="/delete?id={{_id}}" onclick="return confirm('Do you want to delete?')" class="border button right">Delete</a>
+                    <a href="/delete?id={{_id}}" onclick="return confirm('Do you want to delete?')" 
+                    class="border button right">Delete</a>
                 </div>                    
             </div>
         {{/each}}
-    </ul>
-
-      
+        </ul>      
     </div>
 </body>
 </html>
